; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_test_intarray.c_intarrayCreate.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_test_intarray.c_intarrayCreate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32* }

@SQLITE_NOMEM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [42 x i8] c"CREATE TABLE x(value INTEGER PRIMARY KEY)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32, i8**, i32**, i8**)* @intarrayCreate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @intarrayCreate(i32* %0, i8* %1, i32 %2, i8** %3, i32** %4, i8** %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8**, align 8
  %11 = alloca i32**, align 8
  %12 = alloca i8**, align 8
  %13 = alloca i32, align 4
  %14 = alloca %struct.TYPE_4__*, align 8
  store i32* %0, i32** %7, align 8
  store i8* %1, i8** %8, align 8
  store i32 %2, i32* %9, align 4
  store i8** %3, i8*** %10, align 8
  store i32** %4, i32*** %11, align 8
  store i8** %5, i8*** %12, align 8
  %15 = load i32, i32* @SQLITE_NOMEM, align 4
  store i32 %15, i32* %13, align 4
  %16 = call %struct.TYPE_4__* @sqlite3_malloc64(i32 8)
  store %struct.TYPE_4__* %16, %struct.TYPE_4__** %14, align 8
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %14, align 8
  %18 = icmp ne %struct.TYPE_4__* %17, null
  br i1 %18, label %19, label %28

19:                                               ; preds = %6
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %14, align 8
  %21 = call i32 @memset(%struct.TYPE_4__* %20, i32 0, i32 8)
  %22 = load i8*, i8** %8, align 8
  %23 = bitcast i8* %22 to i32*
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %14, align 8
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 0
  store i32* %23, i32** %25, align 8
  %26 = load i32*, i32** %7, align 8
  %27 = call i32 @sqlite3_declare_vtab(i32* %26, i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0))
  store i32 %27, i32* %13, align 4
  br label %28

28:                                               ; preds = %19, %6
  %29 = load %struct.TYPE_4__*, %struct.TYPE_4__** %14, align 8
  %30 = bitcast %struct.TYPE_4__* %29 to i32*
  %31 = load i32**, i32*** %11, align 8
  store i32* %30, i32** %31, align 8
  %32 = load i32, i32* %13, align 4
  ret i32 %32
}

declare dso_local %struct.TYPE_4__* @sqlite3_malloc64(i32) #1

declare dso_local i32 @memset(%struct.TYPE_4__*, i32, i32) #1

declare dso_local i32 @sqlite3_declare_vtab(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
